# fraud-ml

./: .gitignore  README.md  pyproject.toml
data/: summary_statistics.csv
snapshots/: .gitkeep
src/: analysis.ipynb  eda.py  eval.py  fraud.py  train.py
